Other - updates info

--- a/app/views/psd-revised-flow/indexxx.html
+++ b/app/views/psd-revised-flow/indexxx.html
@@ -368,10 +368,10 @@
                 <br><span class="govuk-!-font-size-16">The 'Add supporting information' link goes to the current form page with the list of choices of information to add, but the individual 'Add' links go directly to the relevant blank form pages (bypassing the list of choices form page). We keep the same patterns, except 'Phone call' becomes 'Telephone' and we add 'type' to 'Test results' and 'Other'. (For 'Other' see below). Each individual list is ordered by the Added date, with newest at the top. The left nav has jump-to links 'jumping' to each section. We remove the sorting options. The link in each 'title' section opens the legacy pages for each item (from which the user can utilise any editing options)<sup>*</sup></span>.
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
-                    <li class="govuk-!-font-size-16">
+                    <!--li class="govuk-!-font-size-16">
                         <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/supporting-information-other.html" target="_blank">Case page - Supporting information with Other info</a> - shows the page/<abbr>HTML</abbr> with 'Other' documents
                         <br><span class="govuk-!-font-size-16">If a case (which will be legacy/closed cases) has any documents uploaded via the previous 'Other' option - which are NOT images - then we simply list them in their own section at the foot of the page. Their hyperlinks are direct downloads - as currently demonstrated in current fuctionality - (but note 'download' attribute on this prototype). No need for a quanity count in the header, an 'Add' link, or a link in the left-nav, this is to service old cases.
-                    </li>                     
+                    </li-->                     
                     <li class="govuk-!-font-size-16">
                         <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/supporting-information-empty.html" target="_blank">Case page - Supporting information blank</a> - shows the page/<abbr>HTML</abbr> without any information
                     </li>                    
