tabs images and attachments

--- a/app/views/psd-revised-flow/case-trading-stds-landing-restricted.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-restricted.html
@@ -173,6 +173,9 @@
                 <dd class="govuk-summary-list__value">
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
+                            Renfrewshire Council
+                        </li>
+                        <li>
                             South Yorkshire Trading Standards services
                         </li>
                         <li>
