--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -525,7 +525,7 @@
                                 Title
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Photograph of lorem ipsum</a>
+                                <a href="#" class="govuk-link govuk-link--no-visited-state">lorem ipsum file name</a>
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
