--- a/app/views/psd-revised-flow/inc_products_pg_content_timestamped.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_timestamped.html
@@ -284,7 +284,11 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-2">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>                        
+                    <p class="govuk-body-s opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>   
+                    
+                    {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
+
+                    {% include "psd-revised-flow/inc_tab-prod-img-2.html" %}                    
 
                     <!--p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
                         To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122</span> product record page <span class="govuk-visually-hidden">to access its images</span></a>
@@ -294,6 +298,8 @@
 
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-2">
                     <h4 class="govuk-heading-m">Product attachments</h4>
+
+                    {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
 
                     <!--p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
                         To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122</span> product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
