--- a/app/views/psd-revised-flow/product-page-owned-by-others.html
+++ b/app/views/psd-revised-flow/product-page-owned-by-others.html
@@ -69,7 +69,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#accordion-default-heading-2" class="govuk-link govuk-link--no-visited-state">
+                        <a href="#accordion-attachments" class="govuk-link govuk-link--no-visited-state">
                             Attachments <span>(4)</span>
                         </a>
                     </li>  
@@ -309,12 +309,12 @@
             <div class="govuk-accordion__section">
               <div class="govuk-accordion__section-header">
                 <h2 class="govuk-accordion__section-heading">
-                  <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
+                  <span class="govuk-accordion__section-button" id="accordion-attachments">
                     Attachments <span class="govuk-!-font-weight-regular govuk-!-font-size-19">(4)</span>
                   </span>
                 </h2>
               </div>
-              <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
+              <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-attachments">
 
                 {% include "psd-revised-flow/inc_products_pg_attachments.html" %}
 
