type in test changed to result

--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -456,7 +456,7 @@
                         <div class="govuk-summary-list__row">
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
-                                    Type
+                                    Result
                                 </dt>
                                 <dd class="govuk-summary-list__value">
                                     Pass  <!-- Fail, or Other -->
