--- a/app/views/psd-revised-flow/inc_products_pg_content_yorkshire-owner.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_yorkshire-owner.html
@@ -167,7 +167,7 @@
                             </dd>
                         </div>
 
-                            <!-- if and 3 have a value .... start -->
+                            <!-- if and 3 have a value .... start 
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
                                     Constituent names
@@ -175,11 +175,11 @@
                                 <dd class="govuk-summary-list__value">
                                     <dl class="opss-nested-definition-list">
                                         <div>
-                                            <dt>Manufacturer's brand name</dt>
+                                            <dt>Brand name</dt>
                                             <dd>Asda</dd>
                                         </div>
                                         <div>
-                                            <dt>Product brand name</dt>
+                                            <dt>Product name</dt>
                                             <dd>Lorem ipsum</dd>   
                                         </div>
                                         <div>
@@ -188,7 +188,7 @@
                                         </div>
                                     </dl>
                                 </dd>
-                            </div> 
+                            </div> -->
                             <!-- if and 3 have a value .... end -->
     
                             <!--div class="govuk-summary-list__row">
@@ -198,7 +198,24 @@
                                 <dd class="govuk-summary-list__value">
                                     Asda
                                 </dd>
-                            </div-->          
+                            </div--> 
+                            
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Brand name
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Asda
+                                </dd>
+                            </div>  
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Product name
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Dishwashing liquid
+                                </dd>
+                            </div> 
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -264,10 +281,10 @@
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Product authenticity
+                                Counterfeit
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                
+                                {% include "psd-revised-flow/inc_products-tab-counterfeit-value.html" %}
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
@@ -303,7 +320,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
                     <h4 class="govuk-heading-m">Product images</h4>
 
-                    <p class="govuk-body-s opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
+                    <p class="govuk-body-s govuk-!-padding-bottom-7 opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
  
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -330,8 +347,9 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
                     <h4 class="govuk-heading-m">Related cases</h4>
                     
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is included in these cases.</p>
-              
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these cases.</p>
+                    
+                    {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
             </div>
 
