--- a/app/views/psd-revised-flow/create-a-product-record-edit.html
+++ b/app/views/psd-revised-flow/create-a-product-record-edit.html
@@ -104,20 +104,25 @@
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Is the product counterfeit?</legend>
+
+      <div class="govuk-hint govuk-!-font-size-16">
+        The counterfeit status will is permanent for this product record. You can create an alternative product record if required.
+      </div>
+
     <div class="govuk-radios">
-    <div class="govuk-radios__item">
-    <input class="govuk-radios__input" id="authenticity" name="product[authenticity]" type="radio" value="counterfeit" />
-    <label class="govuk-label govuk-radios__label " for="authenticity">Yes</label>
-    </div>
-    <div class="govuk-radios__item">
-    <input checked="" class="govuk-radios__input" id="authenticity-1" name="product[authenticity]" type="radio" value="genuine" />
-    <label class="govuk-label govuk-radios__label " for="authenticity-1">No</label>
-    </div>
-    <div class="govuk-radios__item">
-    <input class="govuk-radios__input" id="authenticity-2" name="product[authenticity]" type="radio" value="unsure" />
-    <label class="govuk-label govuk-radios__label " for="authenticity-2">Unsure</label>
-    </div>
-    </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="authenticity" name="product[authenticity]" type="radio" value="counterfeit" aria-disabled="true" disabled />
+        <label class="govuk-label govuk-radios__label " for="authenticity">Yes</label>
+      </div>
+      <div class="govuk-radios__item">
+        <input checked="" class="govuk-radios__input" id="authenticity-1" name="product[authenticity]" type="radio" value="genuine" aria-disabled="true" disabled />
+        <label class="govuk-label govuk-radios__label " for="authenticity-1">No</label>
+      </div>
+      <!--div class="govuk-radios__item">
+      <input class="govuk-radios__input" id="authenticity-2" name="product[authenticity]" type="radio" value="unsure" />
+      <label class="govuk-label govuk-radios__label " for="authenticity-2">Unsure</label>
+      </div>
+      </div-->
     </fieldset>
     </div>
   
@@ -211,7 +216,7 @@
   </div-->
   
   <div class="govuk-form-group">
-    <label class="govuk-label govuk-label--m" for="product_brand">Product brand (if branded)</label>
+    <label class="govuk-label govuk-label--m" for="product_brand">Manufacturer's brand name</label>
     <div class="govuk-hint " id="product_brand-hint">For example, ‘Dyson’ or ‘Sony’</div>
     <input aria-describedby="product_brand-hint" class="govuk-input app-!-max-width-one-half" id="product_brand" name="product[brand]" type="text" value="Tesco" />
     </div>
