--- a/app/views/psd-revised-flow/inc_products_pg_content_multi.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_multi.html
@@ -163,7 +163,7 @@
                             </dd>
                         </div>
 
-                        <!-- if and 3 have a value .... start -->
+                        <!-- if and 3 have a value .... start 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Constituent names
@@ -171,7 +171,7 @@
                             <dd class="govuk-summary-list__value">
                                 <dl class="opss-nested-definition-list">
                                     <div>
-                                        <dt>Manufacturer's brand name</dt>
+                                        <dt>Brand name</dt>
                                         <dd>Asda</dd>
                                     </div>
                                     <div>
@@ -185,16 +185,25 @@
                                 </dl>
                             </dd>
                         </div> 
+                        -->
                         <!-- if and 3 have a value .... end -->
 
-                        <!--div class="govuk-summary-list__row">
+                        <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Brand
+                                Brand name
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 Asda
                             </dd>
-                        </div-->                        
+                        </div>  
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Product name
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Dishwashing liquid
+                            </dd>
+                        </div>                                               
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -254,13 +263,13 @@
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Product authenticity
+                                Counterfeit
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                
+                                {% include "psd-revised-flow/inc_products-tab-counterfeit-value.html" %}
                             </dd>
                         </div>
-                        <div class="govuk-summary-list__row">
+                        <div class="govuk-summary-list__row">  
                             <dt class="govuk-summary-list__key">
                                 Product marking 
                             </dt>
@@ -295,7 +304,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-2">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body-s opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>  
+                    <p class="govuk-body-s govuk-!-padding-bottom-7 opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>  
                     
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -319,7 +328,9 @@
                 </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-2">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is included in these cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these cases.</p>
+
+                    {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
             </div>
 
@@ -425,7 +436,7 @@
                             </dd>
                         </div>
 
-                            <!-- if and 3 have a value .... start -->
+                            <!-- if and 3 have a value .... start 
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
                                     Constituent names
@@ -433,11 +444,11 @@
                                 <dd class="govuk-summary-list__value">
                                     <dl class="opss-nested-definition-list">
                                         <div>
-                                            <dt>Manufacturer's brand name</dt>
+                                            <dt>Brand name</dt>
                                             <dd>Asda</dd>
                                         </div>
                                         <div>
-                                            <dt>Product brand name</dt>
+                                            <dt>Product name</dt>
                                             <dd>Lorem ipsum</dd>   
                                         </div>
                                         <div>
@@ -446,7 +457,7 @@
                                         </div>
                                     </dl>
                                 </dd>
-                            </div> 
+                            </div> -->
                             <!-- if and 3 have a value .... end -->
     
                             <!--div class="govuk-summary-list__row">
@@ -456,7 +467,24 @@
                                 <dd class="govuk-summary-list__value">
                                     Asda
                                 </dd>
-                            </div-->          
+                            </div-->  
+                            
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Brand name
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Asda
+                                </dd>
+                            </div>  
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Product name
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Dishwashing liquid
+                                </dd>
+                            </div>                             
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -522,10 +550,10 @@
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Product authenticity
+                                Counterfeit
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                
+                                {% include "psd-revised-flow/inc_products-tab-counterfeit-value.html" %}
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
@@ -563,7 +591,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
                     <h4 class="govuk-heading-m">Product images</h4>
 
-                    <p class="govuk-body-s opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
+                    <p class="govuk-body-s govuk-!-padding-bottom-7 opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
 
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -591,7 +619,9 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
                     <h4 class="govuk-heading-m">Related cases</h4>
                     
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is included in these cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these cases.</p>
+
+                    {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
               
                 </div>
             </div>
@@ -697,7 +727,7 @@
                             </dd>
                         </div>
 
-                            <!-- if and 3 have a value .... start -->
+                            <!-- if and 3 have a value .... start 
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
                                     Constituent names
@@ -705,11 +735,11 @@
                                 <dd class="govuk-summary-list__value">
                                     <dl class="opss-nested-definition-list">
                                         <div>
-                                            <dt>Manufacturer's brand name</dt>
+                                            <dt>Brand name</dt>
                                             <dd>Asda</dd>
                                         </div>
                                         <div>
-                                            <dt>Product brand name</dt>
+                                            <dt>Product name</dt>
                                             <dd>Lorem ipsum</dd>   
                                         </div>
                                         <div>
@@ -718,7 +748,7 @@
                                         </div>
                                     </dl>
                                 </dd>
-                            </div> 
+                            </div> -->
                             <!-- if and 3 have a value .... end -->
     
                             <!--div class="govuk-summary-list__row">
@@ -728,7 +758,23 @@
                                 <dd class="govuk-summary-list__value">
                                     Asda
                                 </dd>
-                            </div-->                                  
+                            </div-->  
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Brand name
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Asda
+                                </dd>
+                            </div>  
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Product name
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Dishwashing liquid
+                                </dd>
+                            </div>                                                             
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -788,10 +834,10 @@
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Product authenticity
+                                Counterfeit
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                
+                                {% include "psd-revised-flow/inc_products-tab-counterfeit-value.html" %}
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
@@ -830,7 +876,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-3">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body-s opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>                        
+                    <p class="govuk-body-s govuk-!-padding-bottom-7 opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>                        
 
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -852,7 +898,9 @@
                 </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-3">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is included in these cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these cases.</p>
+
+                    {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
             </div>
 
