--- a/app/views/psd-revised-flow/inc_tab-prod-img-1.html
+++ b/app/views/psd-revised-flow/inc_tab-prod-img-1.html
@@ -1,14 +1,9 @@
-<section class="govuk-!-margin-bottom-9">
+<!--section class="govuk-!-margin-bottom-9 govuk-!-padding-bottom-6"-->
 
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full">
-            <h3 class="govuk-heading-s">
-                Product image 1
-            </h3>
-        </div>
-    </div> 
+<ul class="govuk-list">
+    <li>
 
-    <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
+    <dl class="govuk-summary-list govuk-!-padding-bottom-9 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
                 Image and title
@@ -44,4 +39,7 @@
         </div>
     </dl>
 
-</section>
+</li>
+
+
+<!--/section-->
