--- a/app/views/psd-revised-flow/is-this-the-product.html
+++ b/app/views/psd-revised-flow/is-this-the-product.html
@@ -31,7 +31,7 @@
                     <section class="govuk-grid-column-three-quarters opss-panels">
                         <div class="opss-panels__single">
 
-                            <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Asda window and glass cleaner</h2>
+                            <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Asda Window and glass cleaner</h2>
 
                             <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-6">
                                 <div class="govuk-summary-list__row">
@@ -43,11 +43,11 @@
                                     </dd>
                                 </div>                            
                                 <div class="govuk-summary-list__row">
-                                    <dt class="govuk-summary-list__key">Brand </dt>
+                                    <dt class="govuk-summary-list__key">Brand name</dt>
                                     <dd class="govuk-summary-list__value">Asda</dd>
                                 </div>
                                 <div class="govuk-summary-list__row">
-                                    <dt class="govuk-summary-list__key">Name </dt>
+                                    <dt class="govuk-summary-list__key">Product name </dt>
                                     <dd class="govuk-summary-list__value">Window and glass cleaner</dd>
                                 </div>
                                 <!--div class="govuk-summary-list__row">
