--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -160,7 +160,7 @@
                 </dd>
             </div>
 
-            <!-- if and 3 have a value .... start -->
+            <!-- if and 3 have a value .... start 
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Constituent names
@@ -168,11 +168,11 @@
                 <dd class="govuk-summary-list__value">
                     <dl class="opss-nested-definition-list">
                         <div>
-                            <dt>Manufacturer's brand name</dt>
+                            <dt>Brand name</dt>
                             <dd>Dyson</dd>
                         </div>
                         <div>
-                            <dt>Product brand name</dt>
+                            <dt>Product name</dt>
                             <dd>Small ball </dd>   
                         </div>
                         <div>
@@ -181,7 +181,7 @@
                         </div>
                     </dl>
                 </dd>
-            </div> 
+            </div> -->
             <!-- if and 3 have a value .... end -->    
             
             <!--div class="govuk-summary-list__row">
@@ -191,7 +191,24 @@
                 <dd class="govuk-summary-list__value">
                     Asda
                 </dd>
-            </div-->            
+            </div--> 
+            
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Brand name
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    Asda
+                </dd>
+            </div>  
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Product name
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    Dishwashing liquid
+                </dd>
+            </div>             
                                   
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
@@ -257,10 +274,10 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Product authenticity
+                    Counterfeit
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    
+                    {% include "psd-revised-flow/inc_products-tab-counterfeit-value.html" %}
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
