--- a/app/views/psd-revised-flow/transition-02.html
+++ b/app/views/psd-revised-flow/transition-02.html
@@ -138,7 +138,7 @@
 
             </div>
             <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key ">Product authenticity</dt>
+              <dt class="govuk-summary-list__key ">Counterfeit</dt>
               <dd class="govuk-summary-list__value ">Not provided</dd>
 
             </div>
